--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Aravind - Portfolio</title>
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" href="https://aravind-alpha.netlify.com/favicon.ico">
+<link rel="icon" href="https://https://github.com/aravind-alpha/myPortfolio/tree/master/favicon.ico">
 <!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet"> -->
 <script src="https://code.jquery.com/jquery-latest.min.js"></script> 
 <script type="text/javascript" src="js/smoothscroll.js"></script>
