--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
-<meta property='og:image' content='//aravind-alpha.netlify.com/linkedin_thumb.png"/>
+<meta property="og:image" content="https://aravind-alpha.netlify.com/linkedin_thumb.png"/>
 <title>Aravind - Portfolio</title>
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
