--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 <footer class="footer">
     <a href="#top" class="go-top smoothScroll">Top</a>
-    <p style="font-size: smaller; color: white;">Made with ❤ by Aravind</p>
+    <p style="font-size: smaller; color: white;">Made with ♥ by Aravind</p>
     <p style="color: white; font-size: smaller;">Copyright © 2020, Aravind-GitHub</p>
 </footer>
 
