--- a/index.html
+++ b/index.html
@@ -147,23 +147,13 @@
         </div>
     </div>
     <div class="ecard">
-        <p class="my-role">Data Analyst</p>
-        <p class="company">Center for Artificial Intelligence and Advanced Analytics</p>
-        <p class="employmenttime">December 2018 - May 2019</p>
-        <div class="description">
-            <p>
-                Data Management : Worked on this Project from gathering Data and Business requirements, Data preparation, Data Modelling, Data Transformation and processed data in SQL Server -> Informatica(ETL) -> DataWarehouse (SQL). Analysed and Visualised the Insights which addressed Business Problems.</br> </br>
-                Machine learning : Predicted Diabetes Patient Readmission, built a Predictive model with good Accuracy and visualised the insights using Visualization tools.
-            </p>
-        </div>
-    </div>
-    <div class="ecard">
-        <p class="my-role">Spark Developer</p>
-        <p class="company">Self-Employed</p>
-        <p class="employmenttime">September 2018 - December 2018</p>
+        <p class="my-role">Big-Data Intern</p>
+        <p class="company">Spark-OT</p>
+        <p class="employmenttime">September 2018 - June 2019</p>
         <div class="description">
             <p>
                 I got Hands-On Training on Big-data Stack with AWS. Completed a Data Migration Project with AWS during that training.
+                Worked on Data Management Project from gathering Data, Preparation, Analysis , ETL and Visualization.
             </p>
         </div>
     </div>
