--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <footer class="footer">
     <a href="#top" class="go-top smoothScroll">Top</a>
     <p style="font-size: smaller; color: white;">Made  with<i class="fa fa-heart" style="font-size:18px;color:red"></i>by  Aravind</p>
-    <p style="color: white; font-size: smaller;">Copyright © 2020, Aravind-GitHub</p>
+    <p style="color: white; font-size: smaller;">© 2020, Aravind</p>
 </footer>
 
 </body>
