--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
             <li><a class="smoothScroll" href="#top" >Home</a></li>
-            <li><a class="smoothScroll" href="#skills" >Skills</a></li>
+            <li><a class="smoothScroll" href="#skills" >Skills</a></li>`
             <li><a class="smoothScroll" href="#interests" >Interests</a></li>
             <li><a class="smoothScroll" href="#contact" >Contact</a></li>
         </ul>
